# RealTime_Voting

./: .env  .gitignore  Caddyfile  README.md  docker-compose.build.yml  docker-compose.swarm.yml  docker-compose.yml
backend/: Cargo.toml  Dockerfile  backend.go  go.mod  go.sum  main.go
backend/src/: config.rs  error.rs  main.rs  metrics.rs  save.rs  signals.rs  state.rs  websocket.rs
counter/: Cargo.toml  Dockerfile
counter/src/: main.rs
deploy/: Caddyfile  docker-build.main.yml  docker-swarm.main.yml
deploy/caddy_config/: Caddyfile
frontend/: .prettierrc  Dockerfile  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.js
frontend/src/: App.svelte  app.html
frontend/src/lib/: Metors.svelte  Particles.svelte  instrumentation.ts
frontend/src/lib/components/: BarChart.svelte  TotalHeader.svelte  TotalVotes.svelte  VoteButton.svelte
frontend/src/lib/stores/: visibility.ts  websocket.ts
frontend/src/routes/: +page.svelte
monitor/: docker-swarm.monitor.yml  loki_config.yml  open_telemetry.config.yaml  prometheus_config.yml  tempo.config.yaml
monitor/grafana/dashboards/: realtimevoting.json
monitor/grafana/provisioning/datasources/: datasources.yml
