[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors", "trace"] }
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
opentelemetry = { version = "0.20", features = ["rt-tokio"] }
tracing-opentelemetry = "0.20"
opentelemetry-otlp = { version = "0.13", features = ["tonic"] }
opentelemetry-semantic-conventions = "0.12"
tonic = "0.10"
reqwest = { version = "0.11", features = ["json"] }

[profile.release]
lto = true
codegen-units = 1
panic = "unwind" 
