[package]
name = "counter"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.20"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.4.0", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "std"] }
rdkafka = { version = "0.28", features = ["cmake-build", "ssl-vendored"] }

[profile.release]
lto = true
codegen-units = 1
panic = "unwind" 

